add lock for update skip locked && e tentativa de paralelizar tarefas